v8.8.0/_sources/generated/pcdsdevices.epics_motor.SmarAct.rst.txt
pcdsdevices.epics\_motor.SmarAct
================================

.. currentmodule:: pcdsdevices.epics_motor

.. autoclass:: SmarAct

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - user_readback (UpdateComponent)
          - :class:`~pcdsdevices.signal.EpicsSignalROEditMD`
          - ``.RBV``
          - Component attribute
              ::

                  Component(EpicsSignalRO, '.RBV', auto_monitor=True, kind='hinted')

          - hinted
          - Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
    
        * - user_setpoint (UpdateComponent)
          - :class:`~pcdsdevices.signal.EpicsSignalEditMD`
          - ``.VAL``
          - Component attribute
              ::

                  Component(EpicsSignal, '.VAL', limits=True, auto_monitor=True, kind='normal')

          - normal
          - Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
    
        * - user_offset
          - :class:`~ophyd.signal.EpicsSignal`
          - ``.OFF``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
    
        * - user_offset_dir
          - :class:`~ophyd.signal.EpicsSignal`
          - ``.DIR``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
    
        * - offset_freeze_switch
          - :class:`~ophyd.signal.EpicsSignal`
          - ``.FOFF``
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
    
        * - set_use_switch
          - :class:`~ophyd.signal.EpicsSignal`
          - ``.SET``
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
    
        * - velocity
          - :class:`~ophyd.signal.EpicsSignal`
          - ``.VELO``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
    
        * - acceleration
          - :class:`~ophyd.signal.EpicsSignal`
          - ``.ACCL``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
    
        * - motor_egu
          - :class:`~ophyd.signal.EpicsSignal`
          - ``.EGU``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
    
        * - motor_is_moving
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``.MOVN``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
    
        * - motor_done_move
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``.DMOV``
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
    
        * - high_limit_switch
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``.HLS``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
    
        * - low_limit_switch
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``.LLS``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
    
        * - high_limit_travel (UpdateComponent)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``.HLM``
          - Component attribute
              ::

                  Component(EpicsSignal, '.HLM', auto_monitor=True, kind='omitted')

          - config
          - Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
    
        * - low_limit_travel (UpdateComponent)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``.LLM``
          - Component attribute
              ::

                  Component(EpicsSignal, '.LLM', auto_monitor=True, kind='omitted')

          - config
          - Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
    
        * - direction_of_travel
          - :class:`~ophyd.signal.EpicsSignal`
          - ``.TDIR``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
    
        * - motor_stop
          - :class:`~ophyd.signal.EpicsSignal`
          - ``.STOP``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
    
        * - home_forward
          - :class:`~ophyd.signal.EpicsSignal`
          - ``.HOMF``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
    
        * - home_reverse
          - :class:`~ophyd.signal.EpicsSignal`
          - ``.HOMR``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
    
        * - disabled
          - :class:`~ophyd.signal.EpicsSignal`
          - ``.DISP``
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
    
        * - description
          - :class:`~ophyd.signal.EpicsSignal`
          - ``.DESC``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
    
        * - dial_position
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``.DRBV``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
    
        * - velocity_base
          - :class:`~ophyd.signal.EpicsSignal`
          - ``.VBAS``
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
    
        * - velocity_max
          - :class:`~ophyd.signal.EpicsSignal`
          - ``.VMAX``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
    
        * - msta_raw
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``.MSTA``
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
    
        * - pos_type
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:PTYPE_RBV``
          - 
          - config
          - 
    
        * - needs_calib
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:NEED_CALIB``
          - 
          - config
          - 
    
        * - do_calib
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:DO_CALIB.PROC``
          - 
          - config
          - 
    
        * - log_scale_offset
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:LSCO``
          - Logical Scale Offset
          - omitted
          - 
    
        * - def_range_min
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:DRMIN``
          - Default Range Minimum
          - omitted
          - 
    
        * - def_range_max
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:DRMAX``
          - Default Range Maximum
          - omitted
          - 
    
        * - log_scale_inv
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:LSCI_RBV``
          - Default Range Minimum
          - omitted
          - 
    
        * - dist_code_inv
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:DCIN_RBV``
          - Distance Code Inversion
          - omitted
          - 
    
        * - channel_temp
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:CHANTEMP``
          - Temperature at the channel's amplifier
          - normal
          - 
    
        * - module_temp
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:MODTEMP``
          - Temperature of the MCS2 Module in the rack
          - normal
          - 
    
        * - channel_state_raw
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:STATE_RBV``
          - Channel state bitmask represented as raw int
          - omitted
          - 
    
        * - open_loop
          - :class:`~pcdsdevices.epics_motor.SmarActOpenLoop`
          - 
          - 
          - omitted
          - 
    

    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: camonitor
    .. automethod:: check_limit_switches
    .. automethod:: clear_limits
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: disable
    .. automethod:: enable
    .. automethod:: end_monitor_thread
    .. automethod:: get
    .. automethod:: get_high_limit
    .. automethod:: get_lim
    .. automethod:: get_low_limit
    .. automethod:: home
    .. automethod:: move
    .. automethod:: mv
    .. automethod:: mv_ginput
    .. automethod:: mvr
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: screen
    .. automethod:: set
    .. automethod:: set_current_position
    .. automethod:: set_high_limit
    .. automethod:: set_lim
    .. automethod:: set_low_limit
    .. automethod:: set_position
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    .. automethod:: tweak
    .. automethod:: umv
    .. automethod:: umvr
    .. automethod:: wait
    .. automethod:: wm
    .. automethod:: wm_update
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: egu
    .. autoattribute:: high_limit
    .. autoattribute:: hints
    .. autoattribute:: homed
    .. autoattribute:: kind
    .. autoattribute:: limits
    .. autoattribute:: low_limit
    .. autoattribute:: moving
    .. autoattribute:: msta
    .. autoattribute:: position
    .. autoattribute:: precision
    .. autoattribute:: settle_time
    .. autoattribute:: subscriptions
    .. autoattribute:: timeout
    .. autoattribute:: tolerated_alarm
    
    